--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -34,7 +34,7 @@ tests:
       python_version: ${{ python_min }}.*
 
 about:
-  repository: https://github.com/JosephBARBIERDARNAL/pyfonts
+  repository: https://github.com/y-sunflower/pyfonts
   summary: 'A simple (and reproducible) way to load fonts for matplotlib.'
   description: |
     A simple (and reproducible) way to load fonts for matplotlib.
