--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -23,7 +23,7 @@ requirements:
     - setuptools-scm
   run:
     - python >=${{ python_min }}
-    - matplotlib-base >=3.9.1
+    - matplotlib-base
     - requests
 
 tests:
